# lasfera

./: .env.example  .gitignore  DEVNOTES.rst  README.md  package-lock.json  package.json  pyproject.toml
common/: admin.py
config/: settings.py  urls.py
gallery/templates/gallery/: gallery_index_page.html
manuscript/: admin.py  models.py  serializers.py  urls.py  views.py
manuscript/management/commands/: reconnect_annotations.py
manuscript/migrations/: 0117_delete_stanzavariant.py  0118_strip_outer_div_from_stanza_text.py  0119_stanza_is_rubric_stanzatranslated_is_rubric.py  0120_alter_stanza_options_alter_stanzatranslated_options.py  0121_manuscriptfamily.py  0122_populate_rubrics.py
manuscript/templatetags/: stanza_tags.py
pages/: models.py
pages/migrations/: 0005_manuscriptsintroduction.py
static/css/: custom.css
static/js/: annotations.js  text_annotations.js  tify-sync.js  variant_annotations.js
templates/: dmca.html  index.html  manuscript_single.html  manuscripts.html  stanzas.html
templates/gazetteer/: gazetteer_index.html  gazetteer_results.html  gazetteer_single.html
templates/pages/: about_page.html
templates/partials/: navigation.html  toponym_aliases_table.html  toponym_line_codes.html  toponym_metadata.html  toponyms_list.html
textannotation/: admin.py  apps.py  models.py  resources.py  urls.py
textannotation/migrations/: 0004_crossreference_editorialnote_textualvariant_and_more.py  0005_alter_textualvariant_notes.py
theme/static_src/: package-lock.json  package.json
